# arcform

./: CLAUDE.md  Cargo.toml  README.md
cards/: 0002-step-execution.yaml  0003-manifest-validation.yaml  0007-step-progress-feedback.yaml  0008-asset-registry.yaml  0009-sql-introspection.yaml  0010-run-state-tracking.yaml  0010-selective-rematerialisation.yaml  0011-local-remote-parity.yaml  0012-multi-engine-dialect-support.yaml  0014-step-preconditions.yaml  0015-execution-resilience.yaml  0016-pipeline-parameterisation.yaml  0017-lifecycle-hooks.yaml  0019-typed-step-executors.yaml  0020-pipeline-scheduling.yaml  0021-secrets-management.yaml
decisions/: 0001-asset-centric-pipeline-engine.md  0002-rust-implementation.md  0003-delegate-execution-to-engine-cli.md  0004-yaml-manifest-with-steps-and-assets.md  0005-duckdb-as-default-engine.md  0007-sql-introspection-core-feature.md  0010-v01-scope-step-execution-foundation.md
docs/: ARCHITECTURE.md
orbit/cards/: 0001-project-scaffolding.yaml  0004-engine-preflight.yaml  0005-sql-passthrough.yaml  0006-shell-command-steps.yaml  0008-asset-registry.yaml  0009-sql-introspection.yaml  0013-lineage-visualisation.yaml  0015-execution-resilience.yaml  0016-pipeline-parameterisation.yaml  0017-lifecycle-hooks.yaml  0018-parallel-step-execution.yaml  0022-reference-pipelines.yaml  0022-registry.yaml
orbit/decisions/: 0006-local-first-remote-compatible.md  0008-cli-binary-name-arc.md  (+7 more)
src/: asset.rs  cli.rs  engine.rs  error.rs  introspect.rs  main.rs  manifest.rs  precondition.rs  runner.rs  state.rs
src/registry/: cache.rs  (+5 more)
(+80 files in other folders)
