[package]
name = "arc"
version = "0.1.0"
edition = "2024"
description = "Local-first data pipeline engine for analytical workflows"
license = "MIT"

[[bin]]
name = "arc"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
owo-colors = "4"
sqlparser = { version = "0.55", features = ["visitor"] }
duckdb = "1.2"
semver = "1"
sha2 = "0.10"
humantime = "2"
ureq = { version = "2", default-features = false, features = ["tls"] }
tar = "0.4"
flate2 = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
